bases/infrastructure/kibana/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kibana
  name: kibana
  namespace: default
spec:
  selector:
    matchLabels:
      app: kibana
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: kibana
    spec:
      containers:
        - image: amazon/opendistro-for-elasticsearch-kibana:1.13.1
          imagePullPolicy: Always
          name: kibana
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          ports:
            - containerPort: 5601
              protocol: TCP
          volumeMounts:
            - name: kibana-config-volume
              mountPath: /usr/share/kibana/config/

      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: kibana-config-volume
          configMap:
            defaultMode: 420
            name: kibana-server-conf
