bases/infrastructure/kibana/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kibana
  name: kibana
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5601
  selector:
    app: kibana
  sessionAffinity: None
  type: ClusterIP
